fix(workflows): Update deploy-docs.yml folder path oom
- Changed folder path in GitHub action from `docs/output` to `dist`.

Signed-off-by: 梦璃酱 <Miao@YumeYuka.plus>

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -57,6 +57,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: docs-pages
-          folder: docs/output
+          folder: dist
           clean: true
           single-commit: true
