--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "element-plus": "^2.11.5",
     "gsap": "^3.13.0",
     "html-minifier-terser": "^7.2.0",
+    "lucide-vue-next": "^0.548.0",
     "node-fetch": "^3.3.2",
     "vitepress": "2.0.0-alpha.12",
     "vitepress-plugin-rss": "^0.3.2",
